fixed search recipes text overflow

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -29,13 +29,13 @@
     padding:10px;
     margin-left:5px;
     width:30%;
-    height:70%;
+    min-height:70%;
     color:#fff;
     font-size:1rem;
     cursor: pointer;
     text-align: center;
     padding:5px;
-    font-size:1rem;
+    font-size:0.8rem;
     animation: comefromright 1s;
 
     
